tests/invalid/error_09.robot
// error_09: [LÉXICO] Caracter inválido @
sensor luz@;
rutina main() {
    si luz > 10:
        ejecutar activar();
}
